styles.css
body {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
}

button {
    flex: 0 1 20%;
    background-color: rgb(44, 112, 136);
    color: white;
    border: none;
    border-radius: 1.25rem;
    cursor: pointer;
    box-shadow: 2px 8px 15px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease 0s;
    padding: 0.75rem 0px;
}

button:hover {
    transform: translateY(-7px);
    box-shadow: 2px 15px 20px rgba(44, 112, 136, 0.4);
    background-color: rgb(56, 114, 175);
}

.container {
    background-color: rosybrown;
    width: 100vw;
    height: 100vh;
    display: grid;
    grid-template-areas:
        "sidebar header"
        "sidebar content";
    grid-template-rows: 1fr 5fr;
    grid-template-columns: 1fr 4fr;
}

.header {
    background-color: yellow;
    grid-area: header;
    display: grid;
    grid-template-rows: 1fr 2fr;
    grid-template-columns: 3fr 2fr;
}

.search {
    display: grid;
    grid-template-columns: 1fr 6fr;
    align-items: center;
}

.search input {
    height: 1.25rem;
    width: 90%;
    border-radius: 1.25rem;
    padding: 0.1rem 0.5rem;
}

.actions {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.sidebar {
    background-color: blue;
    grid-area: sidebar;
    display: flex;
    flex-direction: column;
    color: whitesmoke;
}

.content {
    background-color: goldenrod;
    grid-area: content;
    display: flex;
    padding: 1em;
    padding-top: 2em;
    gap: 1rem;
}

.projects-container {
    background-color: purple;
    grid-area: projects;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 2rem;
    padding-left: 0px;
}

.project-card {
    background-color: lightblue;
    font-weight: bold;
    border-radius: 5px;
    padding: 20px;
    border: 0 solid red;
    border-left-width: thick;
}

.project-card p {
    font-weight: normal;
}

.aside {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.announcements {
    grid-area: announcements;
}

.announcement-container {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    background-color: peachpuff;
    padding-left: 0px;
}

.divider {
    flex-grow: 1;
    border-bottom: 1px solid black;
    margin: 5px;
}


.trending {
    grid-area: trending;
}

.trending-container {
    background-color: peru;
    padding-left: 0px;
}

